Workaround to make Storm workers run in JDK 11 and above